--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -58,84 +58,40 @@
                 android:fillViewport="true">
 
                 <LinearLayout
+                    android:id="@+id/container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:padding="15dp">
 
-
                     <LinearLayout
-                        android:id="@+id/profileLayout"
+                        android:id="@+id/eventlist"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
-
-
-                        <TextView
-                            style="@style/TextAppearance.AppCompat.Headline"
-                            android:id="@+id/userName"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="15dp"
-                            android:layout_weight="1"
-                            android:text="Event"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
-
-                    </LinearLayout>
-
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
-                        android:orientation="horizontal">
-
-
-                        <ImageButton
-                            android:layout_width="?attr/actionBarSize"
-                            android:layout_height="?attr/actionBarSize"
-                            android:background="?attr/selectableItemBackgroundBorderless"
-                            />
-
-
+                        android:orientation="vertical"
+                        android:padding="15dp">
                         <LinearLayout
+                            android:id="@+id/profileLayout"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"
-                            android:orientation="vertical">
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal">
 
 
-                            <LinearLayout
-                                android:layout_width="match_parent"
+                            <TextView
+                                style="@style/TextAppearance.AppCompat.Headline"
+                                android:id="@+id/userName"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:orientation="horizontal">
-
-
-                                <LinearLayout
-                                    android:layout_width="0dp"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:orientation="vertical">
-
-
-                                    <TextView
-                                        android:id="@+id/number2"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="(000) 000-000"
-                                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
-
-                                </LinearLayout>
-
-                            </LinearLayout>
-
+                                android:layout_marginStart="15dp"
+                                android:layout_weight="1"
+                                android:text="Event"
+                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
 
                         </LinearLayout>
 
-
                     </LinearLayout>
+
 
 
                     <LinearLayout
@@ -144,8 +100,6 @@
                         android:layout_marginTop="15dp"
                         android:layout_marginBottom="15dp"
                         android:orientation="horizontal">
-
-
                         <View
                             android:layout_width="?attr/actionBarSize"
                             android:layout_height="0dp" />
@@ -163,7 +117,6 @@
                         android:id="@+id/extraSpace"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
-
                 </LinearLayout>
 
             </androidx.core.widget.NestedScrollView>
