--- a/app/src/main/res/layout/adapter_row.xml
+++ b/app/src/main/res/layout/adapter_row.xml
@@ -38,12 +38,12 @@
                 android:layout_width="200dp"
                 android:layout_height="30dp"
                 android:layout_marginStart="5dp"
-                android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:fontFamily="@font/montserrat_black"
+                android:gravity="left"
                 android:text="Title"
                 android:textSize="18sp"
-                android:gravity="left"
                 app:layout_constraintBottom_toTopOf="@+id/eventLocation"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/eventImage"
@@ -57,9 +57,9 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginBottom="10dp"
                 android:fontFamily="@font/montserrat_black"
+                android:gravity="left"
                 android:text="Location: "
                 android:textSize="12sp"
-                android:gravity="left"
                 app:layout_constraintBottom_toTopOf="@+id/eventTime"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/eventImage" />
@@ -70,13 +70,13 @@
                 android:layout_height="25dp"
                 android:layout_marginStart="5dp"
                 android:layout_marginBottom="10dp"
-                android:fontFamily="@font/montserrat_black"
-                android:text="Date"
-                android:textSize="15sp"
                 android:autoSizeMaxTextSize="15sp"
                 android:autoSizeMinTextSize="7sp"
                 android:autoSizeStepGranularity="2sp"
                 android:autoSizeTextType="uniform"
+                android:fontFamily="@font/montserrat_black"
+                android:text="Date"
+                android:textSize="15sp"
                 app:layout_constraintBottom_toTopOf="@+id/eventCost"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/eventImage" />
@@ -85,12 +85,12 @@
                 android:id="@+id/eventTime"
                 android:layout_width="200dp"
                 android:layout_height="25dp"
-                android:fontFamily="@font/montserrat_black"
-                android:text="Time"
-                android:textSize="15sp"
-                android:gravity="left"
                 android:layout_marginStart="5dp"
                 android:layout_marginBottom="10dp"
+                android:fontFamily="@font/montserrat_black"
+                android:gravity="left"
+                android:text="Time"
+                android:textSize="15sp"
                 app:layout_constraintBottom_toTopOf="@+id/eventDate"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/eventImage" />
@@ -99,12 +99,12 @@
                 android:id="@+id/eventCost"
                 android:layout_width="200dp"
                 android:layout_height="25dp"
-                android:fontFamily="@font/montserrat_black"
-                android:text="Cost"
-                android:textSize="15sp"
-                android:gravity="left"
                 android:layout_marginStart="5dp"
                 android:layout_marginBottom="10dp"
+                android:fontFamily="@font/montserrat_black"
+                android:gravity="left"
+                android:text="Cost"
+                android:textSize="15sp"
                 app:layout_constraintBottom_toTopOf="@+id/sponceringOrganization"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/eventImage" />
@@ -113,15 +113,34 @@
                 android:id="@+id/sponceringOrganization"
                 android:layout_width="200dp"
                 android:layout_height="25dp"
-                android:fontFamily="@font/montserrat_black"
-                android:text="Sponsoring Organization"
                 android:layout_marginStart="5dp"
                 android:layout_marginBottom="15dp"
-                android:textSize="15sp"
+                android:fontFamily="@font/montserrat_black"
                 android:gravity="left"
+                android:text="Sponsoring Organization"
+                android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/eventImage" />
+
+            <TextView
+                android:id="@+id/distance"
+                android:layout_width="104dp"
+                android:layout_height="21dp"
+                android:layout_marginStart="35dp"
+                android:layout_marginTop="193dp"
+                android:layout_marginEnd="272dp"
+                android:layout_marginBottom="16dp"
+                android:fontFamily="@font/montserrat_black"
+                android:gravity="left"
+                android:text="distance"
+                android:textSize="15sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/eventImage"
+                app:layout_constraintTop_toTopOf="@+id/eventImage"
+                app:layout_constraintVertical_bias="1.0" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
