--- a/app/src/main/res/layout/bottomsheet_layout.xml
+++ b/app/src/main/res/layout/bottomsheet_layout.xml
@@ -41,7 +41,8 @@
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="411dp"
-                        android:layout_height="230dp">
+                        android:layout_height="230dp"
+                        android:id="@+id/currentevent">
 
                         <ImageView
                             android:id="@+id/currenteventImage"
@@ -144,6 +145,23 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toEndOf="@+id/currenteventImage" />
+                        <TextView
+                            android:id="@+id/currentdistance"
+                            android:layout_width="104dp"
+                            android:layout_height="21dp"
+                            android:layout_marginStart="35dp"
+                            android:layout_marginTop="193dp"
+                            android:layout_marginEnd="272dp"
+                            android:layout_marginBottom="16dp"
+                            android:fontFamily="@font/montserrat_black"
+                            android:gravity="left"
+                            android:text="distance"
+                            android:textSize="15sp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="@+id/currenteventImage"
+                            app:layout_constraintTop_toTopOf="@+id/currenteventImage"
+                            app:layout_constraintVertical_bias="1.0" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
             </androidx.constraintlayout.widget.ConstraintLayout>
