--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -86,7 +86,7 @@
         android:layout_marginBottom="12dp"
         android:background="@color/yellow_theme"
         android:ems="10"
-        android:hint="mm/dd/yyyy"
+        android:hint="yyyy-mm-dd"
         android:inputType="date"
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintStart_toStartOf="parent" />
@@ -100,7 +100,7 @@
         android:layout_marginBottom="12dp"
         android:background="@color/yellow_theme"
         android:ems="10"
-        android:hint="mm/dd/yyyy"
+        android:hint="yyyy-mm-dd"
         android:inputType="date"
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
