--- a/app/src/main/res/layout/dropdown_item.xml
+++ b/app/src/main/res/layout/dropdown_item.xml
@@ -1,7 +1,8 @@
 <TextView android:id="@+id/textView"
     android:layout_width="match_parent"
-    android:layout_height="25dp"
+    android:layout_height="wrap_content"
     android:text="TextView"
-    android:textSize="15sp"
+    android:textSize="18sp"
+    android:padding="10dp"
     android:fontFamily="@font/montserrat_black"
     xmlns:android="http://schemas.android.com/apk/res/android" />
