--- a/app/src/main/res/layout/bottomsheet_layout.xml
+++ b/app/src/main/res/layout/bottomsheet_layout.xml
@@ -6,6 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
+        android:id="@+id/bottom_sheet"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
         <LinearLayout
             android:layout_width="match_parent"
